--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,10 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: More.qmd
+        text: More
+      - href: Sources.qmd
+        text: Sources
       - about.qmd
 
 format:
